# Passwordless

./: .credo.exs  .dockerignore  .envrc.example  .eslintrc.json  .formatter.exs  .gitignore  .iex.exs  .prettierignore  .sobelow-conf  .tool-versions  Cargo.toml  Dockerfile  README.md  biome.jsonc  coveralls.json  email_otp_implementation_plan.md  knip.json  mix.exs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  xref_graph.dot
.github/: dependabot.yml
.github/workflows/: check.yml  release.yml
assets/: browser.tailwind.plugin.js  custom.tailwind.plugin.js  flag.tailwind.plugin.js  heroicon.tailwind.plugin.js  icon-flags.txt  os.tailwind.plugin.js  package.json  remix.tailwind.plugin.js  tailwind.backpex.config.js  tailwind.config.js  tsconfig.json
assets/css/: _markdown_wysiwyg.css  app.css  backpex.css  combo-box.css  flags.css  petal_components.css  shades.css
assets/js/: alpinejs-csp.d.ts  app.ts  globals.d.ts
cdk/: biome.json  cdk.json  package.json  pnpm-lock.yaml
cdk/lib/: live-check.ts  passwordless-tools-certificates.ts  passwordless-tools.ts
config/: aws.exs  config.exs  dev.exs  locale.exs  prod.exs  runtime.exs  test.exs
lib/: cache.ex  ipstack.ex  live_toast.ex  openai.ex  passwordless.ex  passwordless_web.ex  rate_limit.ex  secret_manager.ex  state_machine.ex  storage.ex  util.ex
lib/aws/: policy.ex  session.ex  sns.ex  tools.ex
lib/cache/: behaviour.ex  in_memory.ex  redis.ex  redix.ex
lib/util/: bin.ex  (+14 more)
native/passwordless_native/: Cargo.toml  README.md
native/passwordless_native/src/: lib.rs
test/: test_helper.exs
(+777 files in other folders)
