[package]
name = "passwordless_native"
version = "0.1.0"
authors = ["Marcin Praski <marcin.praski@opentide.com>"]
edition = "2021"
description = "Internal native code for Passwordless."

[lib]
name = "passwordless_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
mrml = { version = "5.0.0", default-features = false, features = ["parse", "render"] }
rustler = "0.36.1"
markup_fmt = "0.19.0"
dprint-core = "0.67.4"
dprint-plugin-typescript = "0.94.0"